<resources>
    <string name="app_name">Hill encryption</string>
    <string name="text_open_file">Open file</string>
    <string name="text_filler">…</string>
    <string name="text_encoding">Encoding</string>
    <string name="text_encode">Encode</string>
    <string name="text_decode">Decode</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_key">Key:</string>
    <string name="text_matrix">Show key matrix: </string>
    <string name="hint_your_key">your key</string>
    <string name="text_encryption">Encryption</string>
    <string name="text_decryption">Decryption</string>
    <string name="text_ok">OK</string>
</resources>
