<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_open_file"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filler"
        android:onClick="btnOpenFileOnClick"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_encoding"/>
    <RadioGroup
        android:id="@+id/rgDirection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbEncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_encode"/>
        <RadioButton
            android:id="@+id/rbDecode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_decode"/>
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_key"/>
    <EditText
        android:id="@+id/etKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_your_key"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_proceed"
        android:onClick="btnProceedOnClick"/>
</LinearLayout>
